[package]
name = "Untergang"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "=0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "bigdecimal", "chrono" ] }
chrono = { version = "0.4.41", features = ["serde"] }
bigdecimal = "0.4.8"
dotenvy = "0.15"
